--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,16 +9,16 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">All Test Suite</th></tr>
-<tr><td><a href="#t0">C:/Users/piyus/SeleniumWebAutomationFramework001/src/test/java/org/piyush/tests/TestVWOLoginPOMBaseTest.java</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">58,158</td><td></td><td></td></tr>
+<tr><td><a href="#t0">C:/Users/piyus/SeleniumWebAutomationFramework001/src/test/java/org/piyush/tests/TestVWOLoginPOMBaseTest.java</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">81,231</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">All Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">C:/Users/piyus/SeleniumWebAutomationFramework001/src/test/java/org/piyush/tests/TestVWOLoginPOMBaseTest.java &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">org.piyush.tests.TestVWOLoginPOMBaseTest</td><td><a href="#m0">testLoginPositive</a></td><td rowspan="1">1718819945015</td><td rowspan="1">31320</td></tr><tr><th colspan="4">C:/Users/piyus/SeleniumWebAutomationFramework001/src/test/java/org/piyush/tests/TestVWOLoginPOMBaseTest.java &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">org.piyush.tests.TestVWOLoginPOMBaseTest</td><td><a href="#m1">testDashboardPage</a></td><td rowspan="1">1718819981666</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m2">testLoginNegative</a></td><td rowspan="1">1718819929385</td><td rowspan="1">12273</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">All Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">C:/Users/piyus/SeleniumWebAutomationFramework001/src/test/java/org/piyush/tests/TestVWOLoginPOMBaseTest.java &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">org.piyush.tests.TestVWOLoginPOMBaseTest</td><td><a href="#m0">testLoginPositive</a></td><td rowspan="1">1718824534121</td><td rowspan="1">32408</td></tr><tr><th colspan="4">C:/Users/piyus/SeleniumWebAutomationFramework001/src/test/java/org/piyush/tests/TestVWOLoginPOMBaseTest.java &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">org.piyush.tests.TestVWOLoginPOMBaseTest</td><td><a href="#m1">testDashboardPage</a></td><td rowspan="1">1718824569365</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">testLoginNegative</a></td><td rowspan="1">1718824498610</td><td rowspan="1">18873</td></tr></tbody>
 </table>
 <h2>C:/Users/piyus/SeleniumWebAutomationFramework001/src/test/java/org/piyush/tests/TestVWOLoginPOMBaseTest.java</h2><h3 id="m0">org.piyush.tests.TestVWOLoginPOMBaseTest#testLoginPositive</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for presence of element located by: By.cssSelector: [data-qa=&apos;lufexuloga&apos;] (tried for 20 second(s) with 500 milliseconds interval)
 	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
 	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:228)
-	at org.piyush.base.CommonToAllPage.presenceOfElement(CommonToAllPage.java:43)
+	at org.piyush.base.CommonToAllPage.presenceOfElement(CommonToAllPage.java:42)
 	at org.piyush.pages.pageObjectModel.dashboardPage_POM.loggedInUserName(dashboardPage_POM.java:16)
-	at org.piyush.tests.TestVWOLoginPOMBaseTest.testLoginPositive(TestVWOLoginPOMBaseTest.java:34)
+	at org.piyush.tests.TestVWOLoginPOMBaseTest.testLoginPositive(TestVWOLoginPOMBaseTest.java:33)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -47,14 +47,14 @@
 	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
 	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:109)
 Caused by: org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;css selector&quot;,&quot;selector&quot;:&quot;[data-qa=&apos;lufexuloga&apos;]&quot;}
-  (Session info: MicrosoftEdge=126.0.2592.61)
+  (Session info: chrome=124.0.6367.78)
 For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
 Build info: version: &apos;4.21.0&apos;, revision: &apos;79ed462ef4&apos;
 System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;15.0.2&apos;
-Driver info: org.openqa.selenium.edge.EdgeDriver
-Command: [cb893da41f65563977b677d038e3fca8, findElement {value=[data-qa=&apos;lufexuloga&apos;], using=css selector}]
-Capabilities {acceptInsecureCerts: false, browserName: MicrosoftEdge, browserVersion: 126.0.2592.61, fedcm:accounts: true, ms:edgeOptions: {debuggerAddress: localhost:58254}, msedge: {msedgedriverVersion: 126.0.2592.61 (12efce1c0fb4..., userDataDir: C:\Users\piyus\AppData\Loca...}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:58254/devtoo..., se:cdpVersion: 126.0.2592.61, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: cb893da41f65563977b677d038e3fca8
+Driver info: org.openqa.selenium.remote.RemoteWebDriver
+Command: [81f08450d5d1c26a4ded334e2f018679, findElement {using=css selector, value=[data-qa=&apos;lufexuloga&apos;]}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 124.0.6367.78, chrome: {chromedriverVersion: 124.0.6367.78 (a087f2dd364d..., userDataDir: /tmp/.org.chromium.Chromium...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:40755}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: linux, proxy: Proxy(), se:cdp: ws://localhost:4444/devtool..., se:cdpVersion: 124.0.6367.78, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 81f08450d5d1c26a4ded334e2f018679
 	at jdk.internal.reflect.GeneratedConstructorAccessor11.newInstance(Unknown Source)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
 	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:500)
@@ -63,8 +63,7 @@ Session ID: cb893da41f65563977b677d038e3fca8
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
 	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:190)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
+	at org.openqa.selenium.remote.TracedCommandExecutor.execute(TracedCommandExecutor.java:51)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:518)
 	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
 	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
